# mlibrary

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASE_NOTES.md
docs/: DEPLOYMENT.md  schema.sql
src/: AboutDialog.cpp  AddBookDialog.cpp  AddBookDialog.h  AddLibraryDialog.cpp  AddLibraryDialog.h  AuthoringHelperDialog.cpp  AuthoringHelperDialog.h  Book.h  BookViewerDialog.cpp  BookViewerDialog.h  BulkEditDialog.cpp  BulkEditDialog.h  ConversionDialog.cpp  ConversionDialog.h  ConversionService.cpp  ConversionService.h  CopyMoveDialog.cpp  CopyMoveDialog.h  DatabaseManager.cpp  DatabaseManager.h  DatabaseSetupDialog.cpp  DatabaseSetupDialog.h  LibraryData.h  LicenseDialog.cpp  LicenseDialog.h  MainWindow.cpp  MainWindow.h  MetadataDownloadDialog.cpp  MetadataDownloadDialog.h  MetadataService.cpp  MetadataService.h  PhysicalCopyDialog.cpp  PhysicalCopyDialog.h  PreferencesDialog.cpp  PreferencesDialog.h  SearchDialog.cpp  SearchDialog.h  ShortcutsDialog.cpp  ShortcutsDialog.h  SubjectEditDialog.cpp  (+7 more)
